creacion de Ejercicio01.html

--- a/Ejercicio02.html
+++ b/Ejercicio02.html
@@ -5,6 +5,7 @@
     <script src="script02.js"></script>
 </head>
 <body>
+    <h1>Ejercicio 02</h1>
     <div id="form1">
         <input type="text" id="texto">
         <input type="submit" value="enviar" onclick="palindromo('texto')">
